tests/fixtures/invalid/max_none_list.py
# Cannot call max() with None, List[int]
x = max(None, [1, 2, 3])
